<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, PortionTracker!</string>
    <string name="app_name">Portion Tracker</string>
    <string name="more">+</string>
    <string name="less">-</string>
    <string name="water">Water</string>
    <string name="protein">Protein</string>
    <string name="zero">0</string>
    <string name="dairy">Dairy</string>
    <string name="fruit">Fruit</string>
    <string name="vegetable">Vegetable</string>
    <string name="fat">Fat</string>
    <string name="carb">Carb</string>
    <string name="snack">Snack</string>
    <string name="condiment">Condiment</string>
    <string name="settings">Settings</string>
    <string name="goals">Goals</string>
    <string name="graph">Graph</string>
    <string name="button">Button</string>
    <string name="weight">Weight</string>
</resources>
